Fix spacing of field-select options and groups

--- a/packages/block-library/field-input/style.scss
+++ b/packages/block-library/field-input/style.scss
@@ -17,7 +17,6 @@
 		.omniform-field-label {
 			order: 1;
 			margin-bottom: 0;
-			width: calc(100% - 1.5em);
 		}
 
 		.omniform-field-support {
