--- a/packages/block-library/field-select/index.scss
+++ b/packages/block-library/field-select/index.scss
@@ -9,41 +9,14 @@
 		background-image: none;
 	}
 
-	.omniform-field-control {
-
-		> .omniform-select-options-container {
-			padding-left: $grid-unit;
-			padding-right: $grid-unit;
-
-			> li:last-child {
-				border-bottom: 0;
-			}
-		}
-	}
-
-	.omniform-select-options-container {
-		font-size: $default-font-size;
-		margin: 0;
-		margin-top: 0.5em;
-		list-style-type: none;
-		max-height: 450px;
-		overflow: auto;
-	}
-
-	&.type-multiple .omniform-select-options-container {
-		margin-top: 0;
-	}
-
-	li {
-		margin: 0;
-		padding: $grid-unit-10 0;
-		border-bottom: $border-width solid var(--wp--preset--color--contrast, var(--wp--preset--color--foreground, var(--wp--preset--color--cyan-bluish-gray, #000)));
-		list-style-type: none;
+	> .omniform-select-options-container > .wp-block:first-child {
+		margin-block-start: 0;
 	}
 
 	.block-list-appender {
 		position: unset;
 		padding: $grid-unit 0;
+		margin-block-start: 0.75em;
 	}
 
 	.block-editor-button-block-appender.components-button {
