--- a/packages/block-library/select-group/index.scss
+++ b/packages/block-library/select-group/index.scss
@@ -1,13 +1,9 @@
 @import "~@wordpress/base-styles/variables";
 
 .wp-block-omniform-select-group {
+	margin-block-start: 0.75em;
 
-	.block-list-appender {
-		position: unset;
-		padding: $grid-unit $grid-unit $grid-unit 0;
-	}
-
-	.block-editor-button-block-appender.components-button {
-		padding: $grid-unit;
+	.omniform-select-options-container {
+		margin-left: $icon-size;
 	}
 }
